Fixed post/page spacing issues.

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -42,7 +42,7 @@
 	h1, h2, h3, h4, h5, h6 {
 		font-weight: 300;
 		line-height: 1em;
-		margin: 0 0 ($size-element-margin * 0.5) 0;
+		margin: 0 0 ($size-element-margin * 0.35) 0;
 
 		a {
 			color: inherit;
@@ -866,7 +866,7 @@
 /* Banner */
 
 	#feature {
-		padding: 2em 0;
+		padding: 3em 0;
 		text-align: center;
 
 		:last-child {
@@ -964,7 +964,7 @@
         color:$color-bg;
         padding:0.25em 0.5em;
         font-size:0.5em;
-        margin-top:0.65em;
+        margin-top:0.3em;
         line-height:1.25em;
     }
 }
@@ -993,6 +993,15 @@
     }
 }
 
+.single{
+    .post-featured{
+        &:after{
+            margin-top:0.65em;
+            font-size:0.5em;
+        }
+    }
+}
+
 /* Page */
 
 .page-header{
@@ -1000,6 +1009,12 @@
 
     h2{
         font-size:2.5em;
+    }
+}
+
+.post-header{
+    .feature-image{
+        margin-bottom:1.5em;
     }
 }
 
